--- a/Views/Registro.xaml
+++ b/Views/Registro.xaml
@@ -7,11 +7,11 @@
 
         <VerticalStackLayout Spacing="25" >
             <Label 
-                x:Name="usuario"
+                x:Name="txtUsuario"
                 TextColor="White"
                 FontSize="20"
                 VerticalOptions="Center" 
-                HorizontalOptions="End" />
+                HorizontalOptions="Center" />
             <Label 
                 Text="Registro"
                 TextColor="Blue"
@@ -53,7 +53,6 @@
                 <Entry x:Name="txtApellido"
                      Placeholder="Ingrese el apellido"
                      PlaceholderColor="#CCCCCC"
-                     IsPassword="True"
                      TextColor="White"
                      BackgroundColor="#1C1C1C"
                      Grid.Row="1"
